<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="android:color/black"
    android:orientation="vertical">


    <TextView
        android:id="@+id/calcExpression"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:textColor="@color/action_button_color_1"
        android:ellipsize="start"
        android:singleLine="true"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/calcResult"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:textColor="@color/white"
        android:ellipsize="end"
        android:singleLine="true"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="horizontal">

            <Button
                android:id="@+id/calcClear"
                style="@style/ActionButtonStyle"
                android:onClick="onClear"
                android:text="@string/clear"/>
            <Button
                android:id="@+id/calcDivide"
                style="@style/ActionButtonStyle"
                android:onClick="onOperator"
                android:text="@string/divide"
                tools:ignore="UsingOnClickInXml" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"

            android:orientation="horizontal">

            <Button
                android:id="@+id/calcSeven"
                style="@style/NumberButtonStyle"
                android:onClick="onNum"
                android:text="@string/seven"/>
            <Button
                android:id="@+id/calcEight"
                style="@style/NumberButtonStyle"
                android:onClick="onNum"
                android:text="@string/eight"/>
            <Button
                android:id="@+id/calcNine"
                style="@style/NumberButtonStyle"
                android:onClick="onNum"
                android:text="@string/nine"/>
            <Button
                android:id="@+id/calcMul"
                style="@style/NumberActionButton2"
                android:onClick="onOperator"
                android:text="@string/multiply"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"

            android:orientation="horizontal">

            <Button
                android:id="@+id/calcFour"
                style="@style/NumberButtonStyle"
                android:onClick="onNum"
                android:text="@string/four"/>
            <Button
                android:id="@+id/calcFive"
                style="@style/NumberButtonStyle"
                android:onClick="onNum"
                android:text="@string/five"/>
            <Button
                android:id="@+id/calcSix"
                style="@style/NumberButtonStyle"
                android:onClick="onNum"
                android:text="@string/six"/>
            <Button
                android:id="@+id/calcMinus"
                style="@style/NumberActionButton2"
                android:onClick="onOperator"
                android:text="@string/minus"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"

            android:orientation="horizontal">

            <Button
                android:id="@+id/calcOne"
                style="@style/NumberButtonStyle"
                android:onClick="onNum"
                android:text="@string/one"/>
            <Button
                android:id="@+id/calcTwo"
                style="@style/NumberButtonStyle"
                android:onClick="onNum"
                android:text="@string/two"/>
            <Button
                android:id="@+id/calcThree"
                style="@style/NumberButtonStyle"
                android:onClick="onNum"
                android:text="@string/three"/>
            <Button
                android:id="@+id/calcPlus"
                style="@style/NumberActionButton2"
                android:onClick="onOperator"
                android:text="@string/plus"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"

            android:orientation="horizontal">

            <Button
                android:id="@+id/calcDot"
                style="@style/NumberButtonStyle"
                android:onClick="onDot"
                android:text="@string/dot"/>
            <Button
                android:id="@+id/calcZero"
                style="@style/NumberButtonStyle"
                android:onClick="onNum"
                android:text="@string/zero"/>
            <Button
                android:id="@+id/calcBack"
                style="@style/NumberButtonStyle"
                android:onClick="onDel"
                android:text="@string/delete"/>
            <Button
                android:id="@+id/calcEquals"
                style="@style/EqualButtonStyle"
                android:onClick="onEquals"
                android:text="@string/equals"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>